--- a/themes/esmyy/layout/_partial/footer.ejs
+++ b/themes/esmyy/layout/_partial/footer.ejs
@@ -1,7 +1,7 @@
 <footer>
     <div class="mainContent footBar">
         <p class="aboutMe">
-            <a href="/about">
+            <a href="<%= url_for('/about') %>">
                 About Me
             </a></p>
         <p class="copyright">@2022 By esmyy</p>
