feat: update tags

--- a/themes/esmyy/layout/_partial/header.ejs
+++ b/themes/esmyy/layout/_partial/header.ejs
@@ -1,12 +1,13 @@
 <%
 var pathname = page.path.replace('index.html', '')
-var photosActive = /categories\/photos/.test(pathname)
+var photosActive = /photos/.test(pathname)
 var talkActive = /categories\/talk/.test(pathname)
 var readingActive = /categories\/reading/.test(pathname)
 var archivesActive = /archives/.test(pathname)
-var tagActive = /tags/.test(pathname)
 var categoriesActicve = /categories\/?$/.test(pathname)
+var tagActive = /tags/.test(pathname)
 var homeActive = /^(\/?index.html)?$/.test(pathname)
+var shuoshuoActive = /shuoshuo/.test(pathname)
 var lastPhoto = get_last_of(site, 'photo')
 var lastReading = get_last_of(site, 'reading')
 var lastTalk = get_last_of(site, 'talk')
@@ -20,49 +21,37 @@ var lastTalk = get_last_of(site, 'talk')
           <span>首页</span>
         </a>
       </li>
-      <% if (lastTalk) {%>
-      <li class="optionalMenuItem <%= talkActive ? 'selected' : '' %>">
-        <a href="<%= url_for('/categories/talk') %>">
-          <iconpark-icon name="message-emoji"></iconpark-icon>
-          <span>说说</span>
-        </a>
-      </li>
-      <%}%>
-      <% if (lastPhoto) {%>
-      <li class="optionalMenuItem <%= photosActive ? 'selected' : '' %>">
-        <a href="<%= url_for('/categories/photos') %>">
-          <iconpark-icon name="camera"></iconpark-icon>
-          <span>照片</span>
-        </a>
-      </li>
-      <%}%>
-      <% if (lastReading) {%>
-      <li class="optionalMenuItem <%= readingActive ? 'selected' : '' %>">
-        <a href="<%= url_for('/categories/reading') %>">
-          <iconpark-icon name="read-book"></iconpark-icon>
-          <span>阅读</span>
-        </a>
-      </li>
-      <%}%>
-
-      <li class="<%= tagActive ? 'selected' : '' %>">
-        <a href="<%= url_for("/tags") %>">
-          <iconpark-icon name="tag-one"></iconpark-icon>
-          <span>标签</span>
-        </a>
-      </li>
-      <li class="<%= categoriesActicve ? 'selected' : '' %>">
-        <a href="<%= url_for('/categories') %>">
-          <iconpark-icon name="document-folder"></iconpark-icon>
-          <span>分类</span>
-        </a>
-      </li>
       <li class="<%= archivesActive ? 'selected' : '' %>">
         <a href="<%= url_for('/archives') %>">
           <iconpark-icon name="calendar-thirty-two"></iconpark-icon>
           <span>时间轴</span>
         </a>
       </li>
+      <li class="<%= photosActive ? 'selected' : '' %>">
+        <a href="<%= url_for('/photos') %>">
+          <iconpark-icon name="camera"></iconpark-icon>
+          <span>照片</span>
+        </a>
+      </li>
+      <li class="optionalMenuItem <%= tagActive ? 'selected' : '' %>">
+        <a href="<%= url_for("/tags") %>">
+          <iconpark-icon name="tag-one"></iconpark-icon>
+          <span>标签</span>
+        </a>
+      </li>
+      <li class="optionalMenuItem <%= categoriesActicve ? 'selected' : '' %>">
+        <a href="<%= url_for('/categories') %>">
+          <iconpark-icon name="document-folder"></iconpark-icon>
+          <span>分类</span>
+        </a>
+      </li>
+      <li class="<%= shuoshuoActive ? 'selected' : '' %>">
+        <a href="<%= url_for('/shuoshuo') %>">
+          <iconpark-icon name="speaker-one"></iconpark-icon>
+          <span>说说</span>
+        </a>
+      </li>
+
     </ul>
   </div>
   <a class="avatar-box" href="https://github.com/esmyy">
