--- a/themes/esmyy/source/css/first-screen.styl
+++ b/themes/esmyy/source/css/first-screen.styl
@@ -10,7 +10,8 @@
     opacity 0;
     transition: opacity 1s ease;
     animation: firstScreenHidden 10s infinite;
-
+  &.visible
+    display: block
   .lifeCard
     position absolute
     left: 50%
