--- a/themes/esmyy/source/css/homepage.styl
+++ b/themes/esmyy/source/css/homepage.styl
@@ -12,30 +12,15 @@
     position relative
     height 120px
     line-height: 22px;
-    &.lifeCard
-      display flex
-      flex-direction column
-      justify-content space-between
+    flex-grow: 1
     &.talkCard
       background-color #b3dcf5
       border none
-      min-width: 120px
       .speaker
         position absolute
         left: 16px
         top: 10px
       .talkCardContent
-        position: relative;
-        overflow: hidden;
-    &.readingCard
-      background-color #ede0d9
-      border none
-      margin-left 12px;
-      flex-grow: 1;
-      .cardTitle
-        display: flex
-        align-items: center
-      .readingCardContent
         position: relative;
         overflow: hidden;
     &.recentPictureSlider
