--- a/themes/esmyy/layout/shuoshuo.ejs
+++ b/themes/esmyy/layout/shuoshuo.ejs
@@ -1,11 +1,120 @@
-<div class="photosWrapper mt-32">
-    <div id="artitalk_main"></div>
+<div class="shuoshuoWrapper mt-32" id="shuoshuoList">
 </div>
-
-
-<script type="text/javascript" src="<%= css_url('/js/artitalk.js', env.env === 'production') %>"></script>
-<!-- 存放说说的容器 -->
+<script type="text/javascript" src="https://unpkg.com/artitalk"></script>
 <script>
+  const url = 'https://hipsmz3q.api.lncldglobal.com/1.1/classes/shuoshuo'
+  const params = `where=%7B%7D&limit=$limit&order=-createdAt`
+//   fetch(`${url}?${params.replace('$limit', 5).replace('$skip', 5)}`, {
+//     headers: {
+//       'Content-Type': 'application/json;charset=UTF-8',
+//       'x-lc-id': 'HIPSmz3qt9iZF654dkSgfXr2-MdYXbMMI',
+//       'x-lc-session': 'aury8hql9qwingvo2fxdhdk8q',
+//       'x-lc-sign': 'e153fd5a07c1030713514cebeb9e710d,1679291639811',
+//       'x-lc-ua': 'LeanCloud-JS-SDK/4.5.3 (Browser)',
+//     }
+//   }).then((res) => {
+//     console.log('res', res)
+//     return res.json();
+//   }).then((data) => {
+
+//     console.log('data', data)
+//   })
+
+const data = {
+    "results": [
+        {
+            "updatedAt": "2023-03-20T05:37:23.476Z",
+            "userOs": "Mac",
+            "createdAt": "2023-03-20T05:37:23.476Z",
+            "atContentMd": "test 6",
+            "atContentHtml": "<p>test 6</p>",
+            "avatar": "https://avatars.githubusercontent.com/u/20430185?v=4",
+            "objectId": "6417f113c1fe980a9fa1a91c"
+        },
+        {
+            "updatedAt": "2023-03-20T05:37:19.080Z",
+            "userOs": "Mac",
+            "createdAt": "2023-03-20T05:37:19.080Z",
+            "atContentMd": "test 5",
+            "atContentHtml": "<p>返回北京工作 4 天了，心怀希望，期待用努力创造更美好的生活。 关于春节 在老家的日子还是蛮开心，偶尔体会一下，亲情，友情的不同相处方式。 有时候觉得太快，觉得待在家里陪伴的时间不够。 家是一个充电站，也许无法待得很长，但每次短短的相聚，可以为在外的生活充充</p>",
+            "avatar": "https://avatars.githubusercontent.com/u/20430185?v=4",
+            "objectId": "6417f10fc1fe980a9fa1a91b"
+        },
+        {
+            "updatedAt": "2023-03-20T05:37:13.841Z",
+            "userOs": "Mac",
+            "createdAt": "2023-03-20T05:37:13.841Z",
+            "atContentMd": "test 4",
+            "atContentHtml": "<p>test 4</p>",
+            "avatar": "https://avatars.githubusercontent.com/u/20430185?v=4",
+            "objectId": "6417f109d2fa262c6e1089da"
+        },
+        {
+            "updatedAt": "2023-03-20T05:37:07.814Z",
+            "userOs": "Mac",
+            "createdAt": "2023-03-20T05:37:07.814Z",
+            "atContentMd": "test 3",
+            "atContentHtml": "<p>test 3</p>",
+            "avatar": "https://avatars.githubusercontent.com/u/20430185?v=4",
+            "objectId": "6417f103c1fe980a9fa1a91a"
+        },
+        {
+            "updatedAt": "2023-03-19T12:05:11.276Z",
+            "userOs": "Mac",
+            "createdAt": "2023-03-19T12:05:11.276Z",
+            "atContentMd": "test new artitalk",
+            "atContentHtml": "<p>test new artitalk</p>",
+            "avatar": "https://avatars.githubusercontent.com/u/20430185?v=4",
+            "objectId": "6416fa77d2fa262c6e104f26"
+        }
+    ]
+};
+
+function getTime(createdAt) {
+    const date = new Date(createdAt);
+    const year = date.getFullYear()
+    const month = ['0', date.getMonth() + 1].join('').slice(-2);
+    const day = ['0', date.getDay() + 1].join('').slice(-2);
+    const hours = date.getHours();
+    const minutes = date.getMinutes();
+    const seconds = date.getSeconds();
+    return `${year}-${month}-${day} ${hours}:${minutes}:${seconds}`;
+}
+
+function createNode(config) {
+    const item = document.createElement('div');
+    item.classList = ['shuoshuoItem'];
+
+    const content = document.createElement('p')
+    content.classList = ['content'];
+    content.innerHTML = config.atContentHtml;
+
+    const time = document.createElement('p');
+    time.classList = ['time'];
+    time.innerHTML = getTime(config.createdAt)
+
+    item.appendChild(time);
+    item.appendChild(content)
+    return item;
+}
+
+function renderList(list) {
+    const shuoshuoList = document.querySelector('#shuoshuoList');
+    const fragment = document.createElement('fragment');
+    list.forEach((item) => {
+        fragment.appendChild(createNode(item));
+    })
+    shuoshuoList.appendChild(fragment)
+}
+
+renderList(data.results)
+</script>
+<script>
+const isPublisher = localStorate.getItem("SHUOSHUO_PUBLISHER");
+if (isPublisher) {
+    
+        <div id="artitalk_main"></div>
+}
 new Artitalk({
     appId: 'HIPSmz3qt9iZF654dkSgfXr2-MdYXbMMI', // Your LeanCloud appId
     appKey: 'IIZyd4Ee0LH46v96sUQFgo7V' // Your LeanCloud appKey
