--- a/themes/esmyy/layout/_partial/article.ejs
+++ b/themes/esmyy/layout/_partial/article.ejs
@@ -24,4 +24,14 @@
     <%- post.content %>
     <% } %>
   </div>
+  <div id="vcomments"></div>
 </article>
+<script src="<%= css_url('/js/valine.1.15.1.js', env.env === 'production') %>">
+</script>
+<script>
+  new Valine({
+    el: '#vcomments',
+    appId: 'HIPSmz3qt9iZF654dkSgfXr2-MdYXbMMI', // Your LeanCloud appId
+    appKey: 'IIZyd4Ee0LH46v96sUQFgo7V' // Your LeanCloud appKey
+  })
+</script>
