--- a/themes/esmyy/layout/layout.ejs
+++ b/themes/esmyy/layout/layout.ejs
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <%- partial('_partial/head') %>
 <body>
+<%- partial('_partial/leancloud') %>
 <%
 const isPure = page.layout === 'pure'
 %>
