--- a/themes/esmyy/source/css/first-screen.styl
+++ b/themes/esmyy/source/css/first-screen.styl
@@ -1,9 +1,8 @@
 .firstScreen
   position relative
-  width: 100vw
+  width: 100%
   height: 100vh
-  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
-  background-position-y: bottom;
+  // background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
   background-size: cover
   display: none;
   opacity: 0;
