--- a/themes/esmyy/source/css/shuoshuo.styl
+++ b/themes/esmyy/source/css/shuoshuo.styl
@@ -9,5 +9,41 @@
   .content {
     font-size: 14px
     padding-bottom: 12px;
+    line-height: 1.8;
+  }
+}
+
+#artitalk_main  {
+  display: none
+}
+
+#shuoshuo_content {
+  display: none}
+
+.bbWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .inputLine {
+    
+  }
+  .pwdLine {
+  }
+  input {
+    padding: 0 8px
+    height: 36px;
+    margin-bottom 10px
+    border: 1px solid;
+    border-radius: 4px;
+    width: 240px;
+    box-sizing: border-box;
+  }
+  .loginBtn {
+    background: #6b9ddd;
+    padding: 6px 12px;
+    border-radius: 6px;
+    color: #fff;
+    width: 240px
+
   }
 }
