--- a/themes/esmyy/layout/shuoshuo.ejs
+++ b/themes/esmyy/layout/shuoshuo.ejs
@@ -4,105 +4,4 @@
 <%- partial('_partial/loadmore.ejs', { id: 'shoushuoLoadMore'})%>
 <div id="artitalk_main"></div>
 <script src="<%= source_url('/js/artitalk.js', env.env === 'production') %>"></script>
-<script>
-;(function() {
-  let params = {
-    pageSize: 10,
-    pageNum: 1
-  }
-
-  function fetchShuoshuo() {
-    const url = `https://ssapi.esmyy.com/1.1/classes/shuoshuo?where=%7B%7D&limit=${params.pageSize}&skip=${(params.pageNum - 1)*params.pageSize}&order=-createdAt`
-    return fetch(url, {
-      headers: params.headers
-    }).then((res) => {
-      return res.json();
-    })
-  }
-
-  function getTime(createdAt) {
-    const date = new Date(createdAt);
-    const year = date.getFullYear()
-    const month = ['0', date.getMonth() + 1].join('').slice(-2);
-    const day = ['0', date.getDay() + 1].join('').slice(-2);
-    const hours = date.getHours();
-    const minutes = date.getMinutes();
-    const seconds = date.getSeconds();
-    return `${year}-${month}-${day} ${hours}:${minutes}:${seconds}`;
-  }
-
-  function createNode(config) {
-    const item = document.createElement('div');
-    item.classList = ['shuoshuoItem'];
-
-    const content = document.createElement('p')
-    content.classList = ['content'];
-    content.innerHTML = config.atContentHtml;
-
-    const time = document.createElement('p');
-    time.classList = ['time'];
-    time.innerHTML = getTime(config.createdAt)
-
-    item.appendChild(time);
-    item.appendChild(content)
-    return item;
-  }
-
-  function renderList(list) {
-    const shuoshuoList = document.querySelector('#shuoshuoList');
-    const fragment = new DocumentFragment()
-    list.forEach((item) => {
-      fragment.appendChild(createNode(item));
-    })
-    shuoshuoList.appendChild(fragment)
-  }
-
-
-  const {
-    appId,
-    appKey,
-    serverUrls
-  } = window.hexoHelper.get_leancloud();
-  new Artitalk({
-    appId,
-    appKey,
-    serverUrls
-  })
-
-
-  const loadmore = document.getElementById('shoushuoLoadMore')
-  function doFetchList() {
-    fetchShuoshuo().then((data) => {
-      const list = data.results || [];
-      if (list.length >= 10) {
-        loadmore.classList.add('more')
-      } else {
-        loadmore.classList.add('nomore')
-      }
-
-      renderList(data.results)
-    })
-  }
-
-  function onReadyToLoad(leancloudRequestData) {
-    params = {
-      ...params,
-      ...leancloudRequestData
-    }
-
-    doFetchList();
-  }
-
-  function registerLoadmoreHandler() {
-    const loadmoreBtn = loadmore.querySelector('.more');
-    loadmoreBtn.addEventListener('click', doFetchList)
-  }
-
-  if (window.leancloudRequestData) {
-    onReadyToLoad(leancloudRequestData)
-  } else {
-    window.onLeancloudReady = onReadyToLoad
-  }
-  registerLoadmoreHandler();
-})()
-</script>
+<script src="<%= source_url('/js/shuoshuo.js', env.env === 'production') %>"></script>
