--- a/themes/esmyy/source/css/base.styl
+++ b/themes/esmyy/source/css/base.styl
@@ -112,44 +112,10 @@ main,
   -webkit-line-clamp: 4;
 
 .hidden
-  display: none
+  display: none !important
+.visible
+  display: inherit;
 
-// loadmore
-.loadmoreWrapper {
-  margin-top: 20px;
-  span {
-    display: inline-block;
-  }
-  .more {
-    background: #6b9ddd;
-    padding: 6px 12px;
-    border-radius: 6px;
-    color: #fff;
-  }
+.flex {
+  display: flex !important;
 }
-.loadmoreWrapper.loading {
-  .more {
-    display: none;
-  }
-  .nomore {
-    display: none;
-  }
-}
-.loadmoreWrapper.nomore {
-  .loading {
-    display: none;
-  }
-  .more {
-    display: none;
-  }
-}
-
-.loadmoreWrapper.more {
-  .loading {
-    display: none;
-  }
-  .nomore {
-    display: none;
-  }
-}
-
