feat: 说说标签展示

--- a/themes/esmyy/source/css/shuoshuo.styl
+++ b/themes/esmyy/source/css/shuoshuo.styl
@@ -1,15 +1,21 @@
 .shuoshuoItem {
   min-height: 60px;
   border-bottom: 1px solid #f0f0f0;
+  padding: 8px;
   .time {
     color: gray;
     font-size: 12px;
-    padding: 8px 0;
   }
   .content {
     font-size: 14px
-    padding-bottom: 12px;
     line-height: 1.8;
+  }
+  .tag {
+    font-size: 12px;
+    padding: 2px 4px;
+    border-radius: 2px;
+    background: gray;
+    color: #fff;
   }
 }
 
@@ -20,7 +26,6 @@
 #shuoshuo_content {
   display: none
 }
-
 
 .bbWrapper {
   display: flex;
