--- a/themes/esmyy/layout/_partial/header.ejs
+++ b/themes/esmyy/layout/_partial/header.ejs
@@ -8,9 +8,7 @@ var categoriesActicve = /categories\/?$/.test(pathname)
 var tagActive = /tags/.test(pathname)
 var homeActive = /^(\/?index.html)?$/.test(pathname)
 var shuoshuoActive = /shuoshuo/.test(pathname)
-var lastPhoto = get_last_of(site, 'photo')
-var lastReading = get_last_of(site, 'reading')
-var lastTalk = get_last_of(site, 'talk')
+var tagExists = tag_exists(site, '照片')
 %>
 <header>
   <div class="mainContent headerContent">
@@ -27,10 +25,10 @@ var lastTalk = get_last_of(site, 'talk')
           <span>时间轴</span>
         </a>
       </li>
-      <li class="<%= photosActive ? 'selected' : '' %>">
-        <a href="<%= url_for('/photos') %>">
-          <iconpark-icon name="camera"></iconpark-icon>
-          <span>照片</span>
+      <li class="optionalMenuItem <%= tagActive ? 'selected' : '' %>">
+        <a href="<%= url_for("/tags") %>">
+          <iconpark-icon name="tag-one"></iconpark-icon>
+          <span>标签</span>
         </a>
       </li>
       <li class="<%= shuoshuoActive ? 'selected' : '' %>">
@@ -39,12 +37,14 @@ var lastTalk = get_last_of(site, 'talk')
           <span>说说</span>
         </a>
       </li>
-      <li class="optionalMenuItem <%= tagActive ? 'selected' : '' %>">
-        <a href="<%= url_for("/tags") %>">
-          <iconpark-icon name="tag-one"></iconpark-icon>
-          <span>标签</span>
-        </a>
-      </li>
+      <% if (tagExists) {%>
+        <li class="<%= photosActive ? 'selected' : '' %>">
+          <a href="<%= url_for('/tags/照片') %>">
+            <iconpark-icon name="camera"></iconpark-icon>
+            <span>照片<%= site.tags %></span>
+          </a>
+        </li>
+      <%} %>
     </ul>
   </div>
   <a class="avatar-box" href="https://github.com/esmyy">
