--- a/themes/esmyy/source/css/first-screen.styl
+++ b/themes/esmyy/source/css/first-screen.styl
@@ -2,14 +2,10 @@
   position relative
   width: 100%
   height: 100vh
-  // background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
   background-size: cover
   display: none;
   opacity: 0;
-  &.visible
-    display: block;
-    opacity 1;
-    transition: all 1s ease;
   .lifeCard
     position absolute
     left: 50%
@@ -43,3 +39,7 @@
     .pictureIntroduction
       bottom: 12px
       right: 12px
+
+@media screen and (max-width: 414px)
+  .firstScreen
+    display: block;
