--- a/themes/esmyy/layout/bb.ejs
+++ b/themes/esmyy/layout/bb.ejs
@@ -10,4 +10,5 @@
   </div>
 </div>
 <script src="<%= source_url('/js/artitalk.js', env.env === 'production') %>"></script>
+<script src="<%= source_url('/js/artitalkHelper.js', env.env === 'production') %>"></script>
 <script src="<%= source_url('/js/bb.js', env.env === 'production') %>"></script>
