--- a/themes/esmyy/layout/index.ejs
+++ b/themes/esmyy/layout/index.ejs
@@ -5,9 +5,9 @@ const lastReading = get_last_of(site, 'reading')
 <div class="recentList">
   <div class="recentLeft">
     <div class="recentCard talkCard card">
-      <p class="talkCardContent ellipse4">
-        <iconpark-icon name="speaker-one" class="verticalAlignTextTop pt-2"></iconpark-icon>
-      </p>
+      <div class="talkCardContent ellipse4" id="latestMomentsBox">
+        
+      </div>
     </div>
   </div>
   <div class="recentRight">
@@ -35,6 +35,9 @@ const lastReading = get_last_of(site, 'reading')
           prev_text: ''
       }) %>
 </div>
+<script src="<%= source_url('/js/artitalk.js', env.env === 'production') %>"></script>
+<script src="<%= source_url('/js/artitalkHelper.js', env.env === 'production') %>"></script>
+<script src="<%= source_url('/js/latestMoment.js', env.env === 'production') %>"></script>
 <script>
 ;(function () {
   const scrollDownIcon = document.getElementById('scrollDownWrapper')
