--- a/themes/esmyy/source/css/moments.styl
+++ b/themes/esmyy/source/css/moments.styl
@@ -1,4 +1,5 @@
-.shuoshuoItem {
+.latestMomentsItem,
+.momentsItem {
   min-height: 60px;
   border-bottom: 1px solid #f0f0f0;
   padding: 8px;
@@ -16,6 +17,17 @@
     border-radius: 2px;
     background: gray;
     color: #fff;
+  }
+}
+
+.latestMomentsItem {
+  border: none;
+  padding: 4px;
+  padding-top: 0;
+  .momentAuthor {
+    width: 16px;
+    height: 16px;
+    // border-radius: 50%;
   }
 }
 
@@ -78,10 +90,9 @@
      margin-top: 30px;
     padding: 4px 8px
     box-sizing: border-box;
-
   }
 }
 
-#shoushuoLoadMore {
+#momentLoadMore {
   padding-left: 8px;
 }
