--- a/src/components/home/FirstScreen.module.css
+++ b/src/components/home/FirstScreen.module.css
@@ -4,7 +4,7 @@
   height: 100vh;
   background-position-y: bottom;
   background-size: cover;
-  background-image: url("https://cdn.jsdelivr.net/gh/esmyy/imghost@main/images/air-beijing-chengdu.jpg");
+  background-image: url("https://cdn.jsdelivr.net/gh/esmyy/esmyy.github.io@gh-pages/images/air-beijing-chengdu.jpg");
   text-align: center;
 }
 
