--- a/themes/esmyy/layout/_partial/head.ejs
+++ b/themes/esmyy/layout/_partial/head.ejs
@@ -19,7 +19,7 @@
   <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://cdn.bootcdn.net/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <script src="https://cdn.bootcdn.net/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
-  <script src="<%= source_url('/js/hexoHelpers.umd.js', env.env === 'production') %>">
+  <script src="<%= source_url('/js/hexoHelpers.umd2.js', env.env === 'production') %>">
   </script>
   <script>
     var _hmt = _hmt || [];
